--- a/public/test1.html
+++ b/public/test1.html
@@ -27,12 +27,10 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/sidebar.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/transition.css">
 
-  <style type="text/css">
-
+   <style type="text/css">
     .hidden.menu {
       display: none;
     }
-
     .masthead.segment {
       min-height: 700px;
       padding: 1em 0em;
@@ -53,7 +51,6 @@
       font-size: 1.7em;
       font-weight: normal;
     }
-
     .ui.vertical.stripe {
       padding: 8em 0em;
     }
@@ -73,7 +70,6 @@
     .ui.vertical.stripe .horizontal.divider {
       margin: 3em 0em;
     }
-
     .quote.stripe.segment {
       padding: 0em;
     }
@@ -81,15 +77,12 @@
       padding-top: 5em;
       padding-bottom: 5em;
     }
-
     .footer.segment {
       padding: 5em 0em;
     }
-
     .secondary.pointing.menu .toc.item {
       display: none;
     }
-
     @media only screen and (max-width: 700px) {
       .ui.fixed.menu {
         display: none !important;
@@ -113,8 +106,6 @@
         font-size: 1.5em;
       }
     }
-
-
   </style>
 
   <script src="assets/library/jquery.min.js"></script>
@@ -124,7 +115,6 @@
   <script>
   $(document)
     .ready(function() {
-
       // fix menu when passed
       $('.masthead')
         .visibility({
@@ -137,12 +127,10 @@
           }
         })
       ;
-
       // create sidebar and attach to menu open
       $('.ui.sidebar')
         .sidebar('attach events', '.toc.item')
       ;
-
     })
   ;
   </script>
@@ -291,7 +279,7 @@
     </div>
   </div>
 </div>
-
+<script src="semantic/dist/semantic.min.js"></script>
 </body>
 
 </html>
