--- a/public/test1.html
+++ b/public/test1.html
@@ -10,7 +10,7 @@
   <!-- Site Properities -->
   <title>Homepage - Semantic</title>
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
+  <!-- test  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css"> -->
 
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
