--- a/public/test1.html
+++ b/public/test1.html
@@ -10,9 +10,9 @@
   <!-- Site Properities -->
   <title>Homepage - Semantic</title>
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <!-- test  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css"> -->
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
 
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
+  <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css"-->
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
