--- a/public/test1.html
+++ b/public/test1.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
   <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css"-->
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
+  <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
+  <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css"-->
 
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
