--- a/public/test1.html
+++ b/public/test1.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
   <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css"-->
   <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css"-->
+  <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
 
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
@@ -25,7 +25,7 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/sidebar.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/transition.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/transition.css"-->
 
    <style type="text/css">
     .hidden.menu {
