--- a/public/test1.html
+++ b/public/test1.html
@@ -20,7 +20,7 @@
 
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <!--link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css"-->
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/button.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
