--- a/public/test1.html
+++ b/public/test1.html
@@ -168,7 +168,7 @@
 
 <!-- Page Contents -->
 <div class="pusher">
-  <div class="header">
+  <div class="ui inverted vertical masthead center aligned segment">
 
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
