--- a/public/test1.html
+++ b/public/test1.html
@@ -167,6 +167,7 @@
 
 
 <!-- Page Contents -->
+<div class="header">
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment">
 
@@ -195,6 +196,7 @@
     </div>
 
   </div>
+</div>
 
   <div class="ui vertical stripe segment">
     <div class="ui middle aligned stackable grid container">
