--- a/public/test1.html
+++ b/public/test1.html
@@ -167,9 +167,8 @@
 
 
 <!-- Page Contents -->
-<div class="header">
 <div class="pusher">
-  <div class="ui inverted vertical masthead center aligned segment">
+  <div>
 
     <div class="ui container">
       <div class="ui large secondary inverted pointing menu">
@@ -217,7 +216,6 @@
         </div>
       </div>
     </div>
-  </div>
 
 
   <div class="ui vertical stripe quote segment">
