--- a/public/test1.html
+++ b/public/test1.html
@@ -262,7 +262,7 @@
     </div>
   </div>
 
-
+  <div class="footer">
   <div class="ui inverted vertical footer segment">
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
@@ -292,6 +292,8 @@
     </div>
   </div>
 </div>
+</div>
+
 
 </body>
 
