--- a/public/test1.html
+++ b/public/test1.html
@@ -154,9 +154,8 @@
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Home</a>
-    <a class="item">Work</a>
-    <a class="item">Company</a>
-    <a class="item">Careers</a>
+    <a class="item">Discussion</a>
+    <a class="item">About</a>
     <div class="right menu">
       <div class="item">
         <a class="ui button">Log in</a>
@@ -171,9 +170,8 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Home</a>
-  <a class="item">Work</a>
-  <a class="item">Company</a>
-  <a class="item">Careers</a>
+  <a class="item">Discussions</a>
+  <a class="item">About</a>
   <a class="item">Login</a>
   <a class="item">Signup</a>
 </div>
@@ -189,9 +187,8 @@
           <i class="sidebar icon"></i>
         </a>
         <a class="active item">Home</a>
-        <a class="item">Work</a>
-        <a class="item">Company</a>
-        <a class="item">Careers</a>
+        <a class="item">Discussions</a>
+        <a class="item">About</a>
         <div class="right item">
           <a class="ui inverted button">Log in</a>
           <a class="ui inverted button">Sign Up</a>
@@ -201,10 +198,11 @@
 
     <div class="ui text container">
       <h1 class="ui inverted header">
-        Imagine-a-Company
+        Your-Social
       </h1>
-      <h2>Do whatever you want when you want to.</h2>
-      <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
+      <h2>Welcome to Your-Social</h2>
+      <h2>a free secure alternative!</h2>
+      <div class="ui huge primary button">Download <i class="right arrow icon"></i></div>
     </div>
 
   </div>
