--- a/public/test1.html
+++ b/public/test1.html
@@ -200,8 +200,7 @@
       <h1 class="ui inverted header">
         Your-Social
       </h1>
-      <h2>Welcome to Your-Social</h2>
-      <h2>a free secure alternative!</h2>
+      <h2>Welcome to Your-Social a free secure alternative!</h2>
       <div class="ui huge primary button">Download <i class="right arrow icon"></i></div>
     </div>
 
