--- a/public/test1.html
+++ b/public/test1.html
@@ -198,7 +198,7 @@
 
     <div class="ui text container">
       <h1 class="ui inverted header">
-        Your-Social
+        <img src="assets/images/logo/logo.png" class="ui large bordered rounded image">
       </h1>
       <h2>Welcome to Your-Social a free secure alternative!</h2>
       <br />
