--- a/public/test1.html
+++ b/public/test1.html
@@ -211,18 +211,16 @@
     <div class="ui middle aligned stackable grid container">
       <div class="row">
         <div class="eight wide column">
-          <h3 class="ui header">We Help Companies and Companions</h3>
-          <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
-          <h3 class="ui header">We Make Bananas That Can Dance</h3>
-          <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
+          <h3 class="ui header">We are an alternative to larger social networks!</h3>
+          <p>We provide security above anything else, your data is important to us and we'll never sell your data!</p>
         </div>
         <div class="six wide right floated column">
-          <img src="assets/images/logo/logo.png" class="ui large bordered rounded image">
+          <img src="assets/images/logo/logo.png" class="ui small rounded image">
         </div>
       </div>
       <div class="row">
         <div class="center aligned column">
-          <a class="ui huge button">Check Them Out</a>
+          <a class="ui huge button">Download <i class="right arrow icon"></i></a>
         </div>
       </div>
     </div>
