--- a/public/test1.html
+++ b/public/test1.html
@@ -206,7 +206,7 @@
     </div>
 
   </div>
-
+  <center>
   <div class="ui vertical stripe segment">
     <div class="ui middle aligned stackable grid container">
       <div class="row">
@@ -222,6 +222,7 @@
       </div>
     </div>
   </div>
+</center>
 
 
   <div class="ui vertical stripe quote segment">
