--- a/public/test1.html
+++ b/public/test1.html
@@ -206,12 +206,11 @@
     </div>
 
   </div>
-  <center>
   <div class="ui vertical stripe segment">
     <div class="ui middle aligned stackable grid container">
       <div class="row">
         <div class="eight wide column">
-          <h3 class="ui header">We are an alternative to larger social networks!</h3>
+          <h3 class="ui header center">We are an alternative to larger social networks!</h3>
           <p>We provide security above anything else, your data is important to us and we'll never sell your data!</p>
         </div>
       </div>
@@ -222,7 +221,6 @@
       </div>
     </div>
   </div>
-</center>
 
 
   <div class="ui vertical stripe quote segment">
