--- a/public/test1.html
+++ b/public/test1.html
@@ -207,7 +207,7 @@
 
   </div>
   <div class="ui vertical stripe segment">
-    <div class="ui middle aligned stackable grid container">
+    <div class="ui center aligned stackable grid container">
       <div class="row">
         <div class="eight wide column">
           <h3 class="ui header center">We are an alternative to larger social networks!</h3>
