--- a/public/test1.html
+++ b/public/test1.html
@@ -225,6 +225,7 @@
 
   <div class="ui vertical stripe segment">
     <div class="ui text container">
+      <h4 class="ui horizontal header divider">
         <a href="#">Case Studies</a>
       </h4>
       <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
