--- a/public/test1.html
+++ b/public/test1.html
@@ -202,7 +202,7 @@
       </h1>
       <h2>Welcome to Your-Social a free secure alternative!</h2>
       <br />
-      <div class="ui huge primary button">Download <i class="right arrow icon"></i></div>
+      <div class="ui huge red button">Download <i class="right arrow icon"></i></div>
     </div>
 
   </div>
